; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wan/extr_dscc4.c_scc_patchl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wan/extr_dscc4.c_scc_patchl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dscc4_dev_priv = type { i64, i32* }
%struct.net_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, %struct.dscc4_dev_priv*, %struct.net_device*, i32)* @scc_patchl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @scc_patchl(i32 %0, i32 %1, %struct.dscc4_dev_priv* %2, %struct.net_device* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.dscc4_dev_priv*, align 8
  %9 = alloca %struct.net_device*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store %struct.dscc4_dev_priv* %2, %struct.dscc4_dev_priv** %8, align 8
  store %struct.net_device* %3, %struct.net_device** %9, align 8
  store i32 %4, i32* %10, align 4
  %12 = load %struct.dscc4_dev_priv*, %struct.dscc4_dev_priv** %8, align 8
  %13 = getelementptr inbounds %struct.dscc4_dev_priv, %struct.dscc4_dev_priv* %12, i32 0, i32 1
  %14 = load i32*, i32** %13, align 8
  %15 = load i32, i32* %10, align 4
  %16 = ashr i32 %15, 2
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i32, i32* %14, i64 %17
  %19 = load i32, i32* %18, align 4
  store i32 %19, i32* %11, align 4
  %20 = load i32, i32* %6, align 4
  %21 = xor i32 %20, -1
  %22 = load i32, i32* %11, align 4
  %23 = and i32 %22, %21
  store i32 %23, i32* %11, align 4
  %24 = load i32, i32* %7, align 4
  %25 = load i32, i32* %11, align 4
  %26 = or i32 %25, %24
  store i32 %26, i32* %11, align 4
  %27 = load i32, i32* %11, align 4
  %28 = load %struct.dscc4_dev_priv*, %struct.dscc4_dev_priv** %8, align 8
  %29 = getelementptr inbounds %struct.dscc4_dev_priv, %struct.dscc4_dev_priv* %28, i32 0, i32 1
  %30 = load i32*, i32** %29, align 8
  %31 = load i32, i32* %10, align 4
  %32 = ashr i32 %31, 2
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds i32, i32* %30, i64 %33
  store i32 %27, i32* %34, align 4
  %35 = load i32, i32* %11, align 4
  %36 = load %struct.dscc4_dev_priv*, %struct.dscc4_dev_priv** %8, align 8
  %37 = getelementptr inbounds %struct.dscc4_dev_priv, %struct.dscc4_dev_priv* %36, i32 0, i32 0
  %38 = load i64, i64* %37, align 8
  %39 = load %struct.dscc4_dev_priv*, %struct.dscc4_dev_priv** %8, align 8
  %40 = call i64 @SCC_REG_START(%struct.dscc4_dev_priv* %39)
  %41 = add nsw i64 %38, %40
  %42 = load i32, i32* %10, align 4
  %43 = sext i32 %42 to i64
  %44 = add nsw i64 %41, %43
  %45 = call i32 @writel(i32 %35, i64 %44)
  ret void
}

declare dso_local i32 @writel(i32, i64) #1

declare dso_local i64 @SCC_REG_START(%struct.dscc4_dev_priv*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
